infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astrovox
  labels:
    name: astrovox
    istio-injection: enabled
